<resources>
    <string name="app_name">ScrapBook</string>
    <string name="login">Login</string>
    <string name="location">Location</string>
    <string name="voice_rec">Voice Recorder</string>
    <string name="camera">Camera</string>
    <string name="notes">Notes</string>
    <string name="media_player">Media Player</string>
    <string name="undo">Undo</string>
    <string name="images">Images</string>

</resources>
