<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    android:shrinkColumns="*"
    android:stretchColumns="*" >

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center" >

        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_span="1"
            android:text="@string/location"
            android:background="#fffff0"
            android:onClick="onSettingsClick"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_span="1"
            android:text="@string/notes"
            android:background="#f0fff0"
            android:onClick="onNotesClick"/>
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" >

        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_span="1"
            android:text="@string/images"
            android:background="#fff0f0"
            android:onClick="onImagesClick"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_span="1"
            android:padding="5dp"
            android:text="@string/camera"
            android:onClick="onCameraClick"
            android:background="#fffff0"/>
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" >

        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_span="1"
            android:text="@string/media_player"
            android:onClick="onMediaPlayerClick"
            android:background="#f0fff0"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_span="1"
            android:text="@string/voice_rec"
            android:onClick="onVoiceRecorderClick"
            android:background="#fff0f0"/>
    </TableRow>

</TableLayout>

